--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     body { font-family: sans-serif; background: #f0fdf4; padding: 20px; }
     .product { background: #fff; padding: 16px; margin-bottom: 12px; border-radius: 8px; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
     .buy { background: #10b981; color: white; padding: 8px 12px; border: none; border-radius: 4px; text-decoration: none; }
+    .product img {
+    max-width: 100%;
+    height: auto;
+  }
   </style>
 </head>
 <body>
