--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="ko">
 <head>
@@ -8,15 +7,17 @@
     body { font-family: sans-serif; background: #f0fdf4; padding: 20px; }
     .product { background: #fff; padding: 16px; margin-bottom: 12px; border-radius: 8px; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
     .buy { background: #10b981; color: white; padding: 8px 12px; border: none; border-radius: 4px; text-decoration: none; }
-    .product img {
-    max-width: 100%;
-    height: auto;
-  }
+    .product img { max-width: 100px; border-radius: 8px; }
   </style>
 </head>
 <body>
   <h1>🌿 친환경 제품 소개</h1>
   <input type="text" id="searchInput" placeholder="제품 이름 검색..." />
+
+  <select id="categoryFilter">
+    <option value="all">전체</option>
+  </select>
+
   <div id="productContainer"></div>
 
   <script src="main.js"></script>
