--- a/index.html
+++ b/index.html
@@ -4,147 +4,167 @@
   <meta charset="UTF-8" />
   <title>🌿 친환경 제품 소개</title>
   <style>
-    * {
-      box-sizing: border-box;
-    }
-
     body {
-      margin: 0;
       font-family: 'Segoe UI', sans-serif;
       background: #f0fdf4;
-      color: #111827;
+      margin: 0;
+      padding: 0;
     }
 
-    header {
+    .header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 20px 40px;
       background: #10b981;
       color: white;
-      padding: 20px 30px;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      flex-wrap: wrap;
     }
 
-    header h1 {
+    .header h1 {
       margin: 0;
-      font-size: 1.8rem;
-      flex: 1;
-      text-align: center;
+      font-size: 28px;
     }
 
-    #searchInput {
-      padding: 10px;
-      font-size: 16px;
-      border-radius: 8px;
-      border: none;
-      margin-left: auto;
-    }
-
-    main {
-      max-width: 960px;
-      margin: 30px auto;
-      padding: 0 20px;
-    }
-
-    .filter-bar {
-      margin-bottom: 20px;
-      text-align: right;
-    }
-
-    #categoryFilter {
-      padding: 8px 12px;
-      font-size: 16px;
+    .header input {
+      padding: 8px;
       border-radius: 6px;
+      border: none;
+      font-size: 14px;
+    }
+
+    nav.menu {
+      background: #d1fae5;
+      padding: 10px 40px;
+    }
+
+    .main-menu {
+      list-style: none;
+      display: flex;
+      gap: 40px;
+      padding: 0;
+      margin: 0;
+    }
+
+    .main-menu > li {
+      position: relative;
+      cursor: pointer;
+    }
+
+    .sub-menu {
+      display: none;
+      position: absolute;
+      background: white;
       border: 1px solid #ccc;
+      padding: 10px;
+      top: 25px;
+      left: 0;
+      border-radius: 6px;
+      z-index: 10;
+    }
+
+    .main-menu > li:hover .sub-menu {
+      display: block;
+      animation: fadeIn 0.3s ease-in-out;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(-10px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    .filter {
+      display: flex;
+      gap: 10px;
+      padding: 20px 40px;
+    }
+
+    .filter button {
+      background: #34d399;
+      color: white;
+      padding: 8px 12px;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+    }
+
+    .container {
+      padding: 20px 40px;
     }
 
     .product {
       background: white;
-      padding: 20px;
-      border-radius: 12px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.06);
-      margin-bottom: 20px;
+      padding: 16px;
+      margin-bottom: 16px;
+      border-radius: 10px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
       display: flex;
+      gap: 16px;
       align-items: center;
-      justify-content: space-between;
-      flex-wrap: wrap;
     }
 
-    .product-content {
-      flex: 1;
-      margin-right: 20px;
+    .product img {
+      width: 80px;
+      height: 80px;
+      border-radius: 8px;
+      object-fit: cover;
     }
 
-    .product h2 {
-      margin: 0 0 8px;
-      font-size: 1.3rem;
-    }
-
-    .product p {
-      margin: 0 0 12px;
+    .product-details {
+      flex-grow: 1;
     }
 
     .buy {
       background: #10b981;
       color: white;
-      padding: 10px 16px;
+      padding: 8px 12px;
       border: none;
-      border-radius: 6px;
+      border-radius: 4px;
       text-decoration: none;
-      font-weight: bold;
-      transition: background 0.2s;
+      font-size: 14px;
+      margin-top: 6px;
+      display: inline-block;
     }
 
-    .buy:hover {
-      background: #059669;
-    }
-
-    .product img {
-      width: 100px;
-      height: 100px;
-      object-fit: cover;
-      border-radius: 8px;
-      border: 1px solid #ddd;
-    }
-
-    @media (max-width: 600px) {
-      header {
-        flex-direction: column;
-        gap: 10px;
-        text-align: center;
-      }
-
-      .product {
-        flex-direction: column;
-        align-items: flex-start;
-      }
-
-      .product img {
-        margin-top: 10px;
-      }
-
-      .filter-bar {
-        text-align: center;
-      }
+    .source-label {
+      font-size: 12px;
+      color: #555;
+      margin-left: 8px;
     }
   </style>
 </head>
 <body>
-  <header>
+  <header class="header">
     <h1>🌿 친환경 제품 소개</h1>
     <input type="text" id="searchInput" placeholder="제품 이름 검색..." />
   </header>
 
-  <main>
-    <div class="filter-bar">
-      <label for="categoryFilter">카테고리:</label>
-      <select id="categoryFilter">
-        <option value="all">전체</option>
-      </select>
-    </div>
+  <nav class="menu">
+    <ul class="main-menu">
+      <li>
+        사업 소개
+        <ul class="sub-menu">
+          <li>팀 소개</li>
+          <li>프로젝트 소개</li>
+        </ul>
+      </li>
+      <li>
+        구매하러 가기
+        <ul class="sub-menu">
+          <li>구매 목록 보기</li>
+        </ul>
+      </li>
+    </ul>
+  </nav>
 
-    <div id="productContainer"></div>
-  </main>
+  <div id="categoryFilter" class="filter">
+    <button data-category="전체">전체</button>
+    <button data-category="욕실용품">욕실용품</button>
+    <button data-category="주방용품">주방용품</button>
+    <button data-category="문구류">문구류</button>
+    <button data-category="패션/소품">패션/소품</button>
+  </div>
+
+  <div id="productContainer" class="container"></div>
 
   <script src="main.js"></script>
 </body>
