--- a/index.html
+++ b/index.html
@@ -3,7 +3,139 @@
 <head>
   <meta charset="UTF-8" />
   <title>친환경 제품 소개</title>
-  <link rel="stylesheet" href="style.css" />
+  <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background: #f0fdf4;
+      margin: 0;
+      padding: 0;
+    }
+
+    .top-bar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 20px 40px;
+      background: white;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.05);
+    }
+
+    .top-bar h1 {
+      margin: 0;
+      font-size: 24px;
+      color: #065f46;
+    }
+
+    #searchInput {
+      padding: 8px 12px;
+      font-size: 16px;
+      border-radius: 6px;
+      border: 1px solid #ccc;
+    }
+
+    .main-nav {
+      position: relative;
+      background: white;
+      border-top: 1px solid #ddd;
+      z-index: 100;
+    }
+
+    .menu {
+      display: flex;
+      justify-content: center;
+      gap: 40px;
+      list-style: none;
+      padding: 12px 0;
+      margin: 0;
+      font-weight: bold;
+      font-size: 18px;
+    }
+
+    .menu-item {
+      position: relative;
+      cursor: pointer;
+    }
+
+    .menu-item a {
+      text-decoration: none;
+      color: inherit;
+    }
+
+    .submenu {
+      position: absolute;
+      top: 100%;
+      left: 0;
+      width: 100vw;
+      background: rgba(255, 255, 255, 0.95);
+      border-top: 1px solid #ddd;
+      display: flex;
+      justify-content: center;
+      gap: 80px;
+      padding: 20px 0;
+      visibility: hidden;
+      opacity: 0;
+      transition: all 0.3s ease;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    }
+
+    .submenu a {
+      color: #111;
+      text-decoration: none;
+      font-size: 16px;
+      padding: 8px 16px;
+      border-radius: 4px;
+      transition: background 0.2s ease;
+    }
+
+    .submenu a:hover {
+      background: #e0f2f1;
+    }
+
+    .menu-item:hover .submenu {
+      visibility: visible;
+      opacity: 1;
+    }
+
+    .product-container {
+      padding: 40px;
+      margin-top: 20px;
+    }
+
+    .product {
+      background: white;
+      padding: 20px;
+      margin-bottom: 20px;
+      border-radius: 10px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
+
+    .product h2 {
+      margin: 0 0 8px 0;
+    }
+
+    .product p {
+      margin: 0 0 12px 0;
+      color: #333;
+    }
+
+    .buy {
+      background: #10b981;
+      color: white;
+      padding: 8px 12px;
+      border: none;
+      border-radius: 4px;
+      text-decoration: none;
+      margin-right: 8px;
+    }
+
+    .domain-tag {
+      font-size: 14px;
+      background: #e0f2f1;
+      color: #065f46;
+      padding: 4px 8px;
+      border-radius: 4px;
+    }
+  </style>
 </head>
 <body>
   <header class="top-bar">
@@ -25,7 +157,9 @@
     </ul>
   </nav>
 
-  <main id="products" class="product-container"></main>
+  <main id="products" class="product-container">
+    <!-- JavaScript로 제품 목록이 여기에 채워집니다 -->
+  </main>
 
   <script src="main.js"></script>
 </body>
