--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
       position: absolute;
       top: 100%;
       left: 0;
-      width: 100vw;
-      background: rgba(255, 255, 255, 0.95);
+      width: 100%;
+      background: rgba(255, 255, 255, 0.96);
       border-top: 1px solid #ddd;
       display: flex;
       justify-content: center;
@@ -75,20 +75,21 @@
       visibility: hidden;
       opacity: 0;
       transition: all 0.3s ease;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      backdrop-filter: blur(4px);
     }
 
     .submenu a {
       color: #111;
       text-decoration: none;
       font-size: 16px;
-      padding: 8px 16px;
-      border-radius: 4px;
+      padding: 10px 20px;
+      border-radius: 6px;
       transition: background 0.2s ease;
     }
 
     .submenu a:hover {
-      background: #e0f2f1;
+      background: #d1fae5;
     }
 
     .menu-item:hover .submenu {
@@ -157,9 +158,7 @@
     </ul>
   </nav>
 
-  <main id="products" class="product-container">
-    <!-- JavaScript로 제품 목록이 여기에 채워집니다 -->
-  </main>
+  <main id="products" class="product-container"></main>
 
   <script src="main.js"></script>
 </body>
