--- a/index.html
+++ b/index.html
@@ -170,8 +170,7 @@
       <li class="menu-item" tabindex="0">
         사업 소개
         <div class="submenu">
-          <a href="#">팀 소개</a>
-          <a href="#">구매 목록 가기</a>
+          <a href="team.html">팀 소개</a>
           <a href="#">프로젝트 소개</a>
         </div>
       </li>
