--- a/team.html
+++ b/team.html
@@ -53,7 +53,7 @@
 <body>
   <header>
     <h1>👥 우리 팀을 소개합니다</h1>
-    <p>친환경 제품 플랫폼을 함께 만들어가는 열정 가득한 팀!</p>
+    <p>연수구 청소년 수련관 소속의 동아리 청소년 의회'US'가 만든 환경을 위한 홈패이지!!</p>
   </header>
 
   <section class="team-section">
@@ -72,7 +72,7 @@
   </section>
 
   <footer>
-    &copy; 2025 친환경 제품 플랫폼 팀
+    &copy; made by 연수구 청소년 수련관 / 동아리 청소년 의회'US'
   </footer>
 </body>
 </html>
