--- a/index.html
+++ b/index.html
@@ -3,159 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>친환경 제품 소개</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background: #f0fdf4;
-      margin: 0;
-      padding: 0;
-    }
-
-    .top-bar {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 20px 40px;
-      background: white;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.05);
-      position: relative;
-      z-index: 10;
-    }
-
-    .top-bar h1 {
-      margin: 0;
-      font-size: 24px;
-      color: #065f46;
-    }
-
-    #searchInput {
-      padding: 8px 12px;
-      font-size: 16px;
-      border-radius: 6px;
-      border: 1px solid #ccc;
-    }
-
-    .main-nav {
-      background: white;
-      box-shadow: 0 1px 2px rgba(0,0,0,0.05);
-      position: relative;
-      z-index: 10;
-    }
-
-    .menu {
-      display: flex;
-      justify-content: center;
-      list-style: none;
-      gap: 40px;
-      padding: 12px 0;
-      margin: 0;
-      font-weight: bold;
-      font-size: 18px;
-      position: relative;
-    }
-
-    .menu-item {
-      position: relative;
-      cursor: pointer;
-    }
-
-    .menu-item a {
-      text-decoration: none;
-      color: inherit;
-    }
-
-    .submenu {
-      position: absolute;
-      top: 100%;
-      left: 0;
-      background: rgba(255, 255, 255, 0.98);
-      display: flex;
-      justify-content: center;
-      gap: 60px;
-      padding: 16px 24px;
-      border-radius: 0 0 12px 12px;
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
-      visibility: hidden;
-      opacity: 0;
-      transition: all 0.3s ease;
-      width: max-content;
-    }
-
-    .submenu a {
-      color: #111;
-      text-decoration: none;
-      font-size: 16px;
-      padding: 8px 12px;
-      border-radius: 6px;
-      transition: background 0.2s ease;
-    }
-
-    .submenu a:hover {
-      background: #d1fae5;
-    }
-
-    .menu-item:hover .submenu,
-    .menu-item:focus-within .submenu {
-      visibility: visible;
-      opacity: 1;
-    }
-
-    .overlay {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100vw;
-      height: 100vh;
-      background: rgba(0, 0, 0, 0.4);
-      display: none;
-      z-index: 5;
-    }
-
-    .menu-item:hover ~ .overlay,
-    .menu-item:focus-within ~ .overlay {
-      display: block;
-    }
-
-    .product-container {
-      padding: 40px;
-      margin-top: 20px;
-    }
-
-    .product {
-      background: white;
-      padding: 20px;
-      margin-bottom: 20px;
-      border-radius: 10px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    }
-
-    .product h2 {
-      margin: 0 0 8px 0;
-    }
-
-    .product p {
-      margin: 0 0 12px 0;
-      color: #333;
-    }
-
-    .buy {
-      background: #10b981;
-      color: white;
-      padding: 8px 12px;
-      border: none;
-      border-radius: 4px;
-      text-decoration: none;
-      margin-right: 8px;
-    }
-
-    .domain-tag {
-      font-size: 14px;
-      background: #e0f2f1;
-      color: #065f46;
-      padding: 4px 8px;
-      border-radius: 4px;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="overlay"></div>
@@ -170,7 +18,7 @@
       <li class="menu-item" tabindex="0">
         사업 소개
         <div class="submenu">
-          <a href="team/team.html">동아리 소개</a>
+          <a href="team.html">동아리 소개</a>
           <a href="#">프로젝트 소개</a>
         </div>
       </li>
@@ -185,7 +33,7 @@
   <footer>
     &copy; made by 연수구 청소년 수련관 / 동아리 청소년 의회'US'
   </footer>
+
   <script src="main.js"></script>
-  
 </body>
 </html>
