--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <li class="menu-item" tabindex="0">
         사업 소개
         <div class="submenu">
-          <a href="team.html">동아리 소개</a>
+          <a href="#team">동아리 소개</a>
           <a href="#">프로젝트 소개</a>
         </div>
       </li>
@@ -29,6 +29,9 @@
   <main id="products" class="product-container">
     <!-- JavaScript로 제품 목록이 여기에 표시됩니다 -->
   </main>
+
+  <!-- team.html 내용이 로드될 섹션 -->
+  <section id="team" class="team-section" style="display: none;"></section>
 
   <footer>
     &copy; made by 연수구 청소년 수련관 / 동아리 청소년 의회'US'
