--- a/team.html
+++ b/team.html
@@ -3,52 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>팀 소개</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background: #f0fdf4;
-      color: #111;
-    }
-
-    header {
-      background: #10b981;
-      color: white;
-      padding: 20px 40px;
-      text-align: center;
-    }
-
-    .team-section {
-      padding: 40px;
-      max-width: 900px;
-      margin: 0 auto;
-    }
-
-    .member {
-      background: white;
-      padding: 20px;
-      margin-bottom: 24px;
-      border-radius: 10px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-    }
-
-    .member h3 {
-      margin: 0 0 8px 0;
-      color: #065f46;
-    }
-
-    .member p {
-      margin: 0;
-      color: #333;
-    }
-
-    footer {
-      text-align: center;
-      padding: 20px;
-      font-size: 14px;
-      color: #666;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
