--- a/team.html
+++ b/team.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>팀 소개</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="team-style.css" />
 </head>
 <body>
   <header>
