--- a/index.html
+++ b/index.html
@@ -26,12 +26,16 @@
     </ul>
   </nav>
 
-  <main id="products" class="product-container">
-    <!-- JavaScript로 제품 목록이 여기에 표시됩니다 -->
-  </main>
+  <main>
+    <section id="products" class="product-container">
+      <!-- 제품 목록 표시 영역 -->
+    </section>
 
-  <!-- team.html 내용이 로드될 섹션 -->
-  <section id="team" class="team-section" style="display: none;"></section>
+    <!-- team.html의 내용을 불러올 섹션 -->
+    <section id="team" class="team-section" style="display: none;">
+      <!-- 여기로 team.html의 .team-section 내용이 로드됩니다 -->
+    </section>
+  </main>
 
   <footer>
     &copy; made by 연수구 청소년 수련관 / 동아리 청소년 의회'US'
