--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
 
   <main>
     <section id="products" class="product-container">
-      <!-- 제품 목록 표시 영역 -->
+      <!-- JavaScript로 제품 목록이 여기에 표시됩니다 -->
     </section>
 
-    <!-- team.html의 내용을 불러올 섹션 -->
-    <section id="team" class="team-section" style="display: none;">
-      <!-- 여기로 team.html의 .team-section 내용이 로드됩니다 -->
+    <!-- team.html을 iframe으로 불러오기 -->
+    <section id="team" class="team-section" style="display: none; padding: 0;">
+      <iframe src="team.html" style="width: 100%; height: 100vh; border: none;"></iframe>
     </section>
   </main>
 
