--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <li class="menu-item" tabindex="0">
         사업 소개
         <div class="submenu">
-          <a href="#team">동아리 소개</a>
+          <a href="team.html">동아리 소개</a>
           <a href="#">프로젝트 소개</a>
         </div>
       </li>
@@ -30,12 +30,6 @@
     <section id="products" class="product-container">
       <!-- JavaScript로 제품 목록이 여기에 표시됩니다 -->
     </section>
-
-    <!-- team.html을 iframe으로 불러오기 -->
-    <section id="team" class="team-section" style="display: none; padding: 0;">
-      <iframe src="team.html" style="width: 100%; height: 100vh; border: none;"></iframe>
-    </section>
-  </main>
 
   <footer>
     &copy; made by 연수구 청소년 수련관 / 동아리 청소년 의회'US'
