--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <section id="team" class="team-section"></section>
 
   <footer>
-    &copy; made by 연수구 청소년 수련관 / 동아리 청소년 의회'US'
+    &copy; 연수구 청소년 수련관 / 동아리 청소년 의회'US'
   </footer>
 
   <script src="main.js"></script>
