--- a/index.html
+++ b/index.html
@@ -18,22 +18,13 @@
       <li class="menu-item" tabindex="0">
         사업 소개
         <div class="submenu">
-          <a href="#team">동아리 소개</a>
+          <a href="team.html">동아리 소개</a>
           <a href="#">프로젝트 소개</a>
         </div>
       </li>
       <li class="menu-item"><a href="#products">구매하러 가기</a></li>
     </ul>
   </nav>
-
-  <main id="products" class="product-container"></main>
-
-  <!-- 여기에 team.html 내용이 삽입됩니다 -->
-  <section id="team" class="team-section"></section>
-
-  <footer>
-    &copy; 연수구 청소년 수련관 / 동아리 청소년 의회'US'
-  </footer>
 
   <script src="main.js"></script>
 </body>
