--- a/index.html
+++ b/index.html
@@ -26,6 +26,15 @@
     </ul>
   </nav>
 
+  <main id="products" class="product-container"></main>
+
+  <!-- 여기에 team.html 내용이 삽입됩니다 -->
+  <section id="team" class="team-section"></section>
+
+  <footer>
+    &copy; 연수구 청소년 수련관 / 동아리 청소년 의회'US'
+  </footer>
+
   <script src="main.js"></script>
 </body>
 </html>
