--- a/team.html
+++ b/team.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <header>
-    <h1>👥 우리 동아리을 소개합니다</h1>
+    <h1>우리 동아리을 소개합니다</h1>
     <p>연수구 청소년 수련관 소속의 동아리 청소년 의회'US'가 만든 환경을 위한 홈패이지!!</p>
   </header>
 
