--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
   <header class="top-bar">
     <h1>🌿 친환경 제품 소개</h1>
-    <div class="search-bar">
+    <div class="search-area">
       <input type="text" id="searchInput" placeholder="제품 이름 검색..." />
       <select id="categorySelect">
-        <option value="all">전체 카테고리</option>
+        <option value="">전체 카테고리</option>
       </select>
     </div>
   </header>
@@ -31,10 +31,7 @@
     </ul>
   </nav>
 
-  <!-- 제품 섹션 -->
   <main id="products" class="product-container"></main>
-
-  <!-- 동아리 소개 섹션 (team.html 내용 삽입됨) -->
   <section id="team" class="team-section" style="display: none;"></section>
 
   <footer>
