--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
   <div class="overlay"></div>
 
   <header class="top-bar">
-    <h1>🌿 친환경 제품 소개</h1>
+    <h1>
+      <a href="#" onclick="scrollToTop()" style="text-decoration: none; color: inherit;">
+        🌿 친환경 제품 소개
+      </a>
+    </h1>
     <div class="search-area">
       <input type="text" id="searchInput" placeholder="제품 이름 검색..." />
       <select id="categorySelect">
@@ -39,5 +43,10 @@
   </footer>
 
   <script src="main.js"></script>
+  <script>
+    function scrollToTop() {
+      window.scrollTo({ top: 0, behavior: 'smooth' });
+    }
+  </script>
 </body>
 </html>
