--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 </head>
 <body>
   <div class="overlay"></div>
-
   <header class="top-bar">
     <h1>
       <a href="#" onclick="scrollToTop()" style="text-decoration: none; color: inherit;">
@@ -21,13 +20,13 @@
       </select>
     </div>
   </header>
-
+  
   <nav class="main-nav">
     <ul class="menu">
       <li class="menu-item" tabindex="0">
         사업 소개
         <div class="submenu">
-          <a href="#team">동아리 소개</a>
+          <a href="team.html">동아리 소개</a>
           <a href="#">프로젝트 소개</a>
         </div>
       </li>
